--- a/redirection.html
+++ b/redirection.html
@@ -44,9 +44,7 @@
                 <button onclick="varusrap()"><a>#1 Song Varus Rap</a></button>
             </div> 
 
-            <div>
-                <iframe src="https://player.twitch.tv/?channel=winevobro&parent=winevobro.guocn.org" frameborder="0" allowfullscreen="false" scrolling="no" height="378" width="620"></iframe>
-            </div>
+<div style="padding-bottom: 56.25%; position: relative;"><iframe width="100%" height="100%" src="https://player.twitch.tv/?autoplay=false&channel=winevobro&parent=winevobro.guocn.org" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"  style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;">
             <div class="credits">
                 <p>Die Website wurde vom größter Winevobro Fan <a href="https://de.linkedin.com/in/leanderguo">Liande</a> gemacht</p>
             </div>
